- Canadian AI improvements

Units/tech
- Increase fuel cost of Naval training
- Replaced trickleback bonus from body armor with recovery rate bonus
- Body armor buffs non-militia units a bit more now
- Nerfed resource requirements of the utility vehicles
- Reduced the speed of transport helicopters so the airborne units don't fucking ZOOM
- Reduced speed for Recon Tanks
- Aircraft nerfed
- Nerfed gain from special forces tech/made them mroe expensive

Balance/Gameplay/Mechanics
- Buffed ISIS again to ensure they last longer than a few months
- Handful of Research Slot Balance to prevent the generic tree nations from having more than more industrialized nations
- Economic decisions now has a bankruptcy explanation as well as debt section
- New Game Rule to remove micronations
- Russia is more likely to chose options beside going putin if playing Ahistorical
- New War on Terror Stuff
- Islamic State no longer starts at full scale conflict with Kurdistan
- Nerfed Focus tree rewards for Brazil
- Balance to Italian Ideas and Focuses
- Slight reduction for infrastructure
- Some math fixes are now redone
- Upped the penalty for researching ahead of time
- Reduced max tech sharing from bonus
- Added a month timer to economic/military aid so you can't spam puppet
- Balanced Canadian Subsidies

Database
- Added 1965 utility vehicles to HUN in 2000
- Cleaned up some background stuff

Politics/Influence
- Rebalanced costs to influence decisions
- Changed Charles Taylor to Right-Wing Populist from Neutral Autocracy
- Added influence values for Liberian and Sierra Leonean rebels
- Made Armed Forces Revolutionary council a puppet of Taylor's Liberia to fix some weirdness with the wars

Content
- Added ceasefire for Ethiopian-Eritrean war to stop them fighting forever
- New Game Rules to Randomize Outlooks/Religion/Internal Factions

Graphics
- Updated Graphics for Coat of Arms
- Fixed a few broken shines

Bugfixes
- Fixed AI spamming Trade Agreement