@@ -1760,9 +1760,10 @@ focus_tree = {
 			NOT = { UKR = { is_in_faction_with = SOV } }
 		}
 		bypass = {
-			UKR = {
-				exists = no
-				is_in_faction_with = SOV
+			OR = {
+				NOT = { country_exists = UKR }
+				UKR = {	is_in_faction_with = SOV }
+				UKR = { is_subject_of = SOV }
 			}
 		}
 		cancel = {
