@@ -24,7 +24,7 @@ Units/tech
 - Reduced the speed of transport helicopters so the airborne units don't fucking ZOOM
 - Reduced speed for Recon Tanks
 - Aircraft nerfed
-- Nerfed gain from special forces tech/made them mroe expensive
+- Nerfed gain from special forces tech/made them more expensive
 
 Balance/Gameplay/Mechanics
 - Buffed ISIS again to ensure they last longer than a few months
@@ -42,6 +42,7 @@ Balance/Gameplay/Mechanics
 - Reduced max tech sharing from bonus
 - Added a month timer to economic/military aid so you can't spam puppet
 - Balanced Canadian Subsidies
+- Capitulations no longer generate world tension
 
 Database
 - Added 1965 utility vehicles to HUN in 2000
@@ -105,6 +106,7 @@ Bugfixes
 - POTEF election campaigning re-enabling
 - Integrating Finland and Greenland no longer gives you cores on the Galapagos and Ecuador
 - Added tooltip to the Occupation of Lebanon idea
+- Added a bypass for Russia's Novorossiya focus if Ukraine is a puppet of Russia
 
 Map
 - New states in West Africa
